[package]
name = "clipcount"
version = "1.0.1"
edition = "2021"
description = "Counting words from the clipboard content."
license = "MIT"
authors = ["magnusrodseth"]
homepage = "https://github.com/magnusrodseth/clipcount"
keywords = ["clipboard", "count", "words", "text", "content", "rust", "cli", "utility"]
readme = "README.md"
repository = "https://github.com/magnusrodseth/clipcount"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
