[package]
name = "clipcount"
version = "1.0.4"
edition = "2021"
description = "Counting words from the clipboard content."
license = "MIT"
authors = ["magnusrodseth"]
homepage = "https://github.com/magnusrodseth/clipcount"
keywords = ["clipboard", "count", "words", "text", "cli"]
readme = "README.md"
repository = "https://github.com/magnusrodseth/clipcount"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
clipboard = "0.5.0"
unicode-segmentation = "1.11.0"
